@@ -1,6 +1,9 @@
 
 Changes in version 0.7.3
 - Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
+- Add janaview plugin
+- Add support for stdint types like uint32_t in janaroot
+
 
 Changes in version 0.7.2
 - Use cache for JGeometryXML::Get(string xpath, string &sval)
